ggml/f4/511381ea9265dfe0352e5a80ac3907e3b68f43/ggml-1-arm64-cpu-low-perf/ctest_debug.log
+ cmake -DCMAKE_BUILD_TYPE=Debug ..
-- The C compiler identification is GNU 11.4.0
-- The CXX compiler identification is GNU 11.4.0
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found Git: /usr/bin/git (found version "2.34.1") 
-- Looking for pthread.h
-- Looking for pthread.h - found
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
-- Found Threads: TRUE  
-- CMAKE_SYSTEM_PROCESSOR: aarch64
GNU ld (GNU Binutils for Ubuntu) 2.38
-- ARM detected
-- ARM detected
-- Configuring done
-- Generating done
-- Build files have been written to: /home/ggml/work/ggml/build-ci-debug

real	0m0.524s
user	0m0.357s
sys	0m0.169s
+ make -j
[  1%] Building CXX object examples/CMakeFiles/common.dir/common.cpp.o
[  2%] Building C object src/CMakeFiles/ggml.dir/ggml.c.o
[  3%] Building C object src/CMakeFiles/ggml.dir/ggml-backend.c.o
[  4%] Building C object src/CMakeFiles/ggml.dir/ggml-alloc.c.o
[  5%] Building C object src/CMakeFiles/ggml.dir/ggml-quants.c.o
[  6%] Linking C shared library libggml.so
[  6%] Built target ggml
[  7%] Building C object tests/CMakeFiles/test-vec0.dir/test-vec0.c.o
[  8%] Building CXX object tests/CMakeFiles/test-grad0.dir/test-grad0.cpp.o
[  9%] Building CXX object tests/CMakeFiles/test-quantize-fns.dir/test-quantize-fns.cpp.o
[ 10%] Building C object tests/CMakeFiles/test-mul-mat2.dir/test-mul-mat2.c.o
[ 11%] Building CXX object tests/CMakeFiles/test-opt.dir/test-opt.cpp.o
[ 12%] Building CXX object tests/CMakeFiles/test-quantize-perf.dir/test-quantize-perf.cpp.o
[ 13%] Building C object tests/CMakeFiles/test-mul-mat0.dir/test-mul-mat0.c.o
[ 14%] Linking C executable ../bin/test-vec0
[ 15%] Building C object tests/CMakeFiles/test0.dir/test0.c.o
[ 16%] Building C object tests/CMakeFiles/test1.dir/test1.c.o
[ 17%] Building C object tests/CMakeFiles/test3.dir/test3.c.o
[ 18%] Building C object tests/CMakeFiles/test2.dir/test2.c.o
[ 19%] Building C object tests/CMakeFiles/test-pool.dir/test-pool.c.o
[ 20%] Building CXX object tests/CMakeFiles/test-arange.dir/test-arange.cpp.o
[ 21%] Linking C executable ../bin/test-mul-mat0
[ 22%] Building CXX object tests/CMakeFiles/test-timestep_embedding.dir/test-timestep_embedding.cpp.o
[ 22%] Built target test-vec0
[ 23%] Building C object tests/CMakeFiles/test-conv-transpose.dir/test-conv-transpose.c.o
[ 24%] Building C object tests/CMakeFiles/test-dup.dir/test-dup.c.o
[ 25%] Linking C executable ../bin/test0
[ 26%] Building C object tests/CMakeFiles/test-rel-pos.dir/test-rel-pos.c.o
[ 27%] Building C object tests/CMakeFiles/test-xpos.dir/test-xpos.c.o
[ 28%] Building C object tests/CMakeFiles/test-customop.dir/test-customop.c.o
[ 29%] Linking CXX executable ../bin/test-opt
[ 30%] Linking CXX executable ../bin/test-arange
[ 31%] Building CXX object tests/CMakeFiles/test-conv1d.dir/test-conv1d.cpp.o
[ 32%] Linking C executable ../bin/test-pool
[ 35%] Building CXX object tests/CMakeFiles/test-conv2d.dir/test-conv2d.cpp.o
[ 36%] Building CXX object tests/CMakeFiles/test-backend-buffer.dir/test-backend-buffer.cpp.o
[ 34%] Building CXX object tests/CMakeFiles/test-mul-mat.dir/test-mul-mat.cpp.o
[ 37%] Linking C executable ../bin/test2
[ 38%] Building CXX object tests/CMakeFiles/test-backend-ops.dir/test-backend-ops.cpp.o
[ 39%] Building CXX object examples/CMakeFiles/common-ggml.dir/common-ggml.cpp.o
[ 40%] Building CXX object examples/whisper/CMakeFiles/whisper-cpp.dir/whisper.cpp.o
[ 41%] Building CXX object examples/mnist/CMakeFiles/mnist-cpu.dir/main-cpu.cpp.o
[ 41%] Built target test-mul-mat0
[ 41%] Built target test0
[ 42%] Building CXX object examples/simple/CMakeFiles/simple-ctx.dir/simple-ctx.cpp.o
[ 43%] Linking C executable ../bin/test3
[ 44%] Linking C executable ../bin/test-rel-pos
[ 44%] Built target test-pool
[ 45%] Linking C executable ../bin/test-conv-transpose
[ 46%] Linking C executable ../bin/test1
[ 47%] Building CXX object examples/simple/CMakeFiles/simple-backend.dir/simple-backend.cpp.o
[ 48%] Linking C executable ../bin/test-dup
[ 49%] Linking C executable ../bin/test-customop
[ 49%] Built target test-opt
[ 50%] Linking C executable ../bin/test-xpos
[ 51%] Linking CXX executable ../bin/test-grad0
[ 51%] Built target test2
[ 50%] Built target test1
[ 51%] Built target test-rel-pos
[ 52%] Linking CXX executable ../bin/test-backend-buffer
[ 52%] Built target test3
[ 52%] Built target test-conv-transpose
[ 52%] Built target test-arange
[ 52%] Built target test-dup
[ 52%] Built target test-xpos
[ 52%] Built target test-customop
[ 52%] Built target test-backend-buffer
[ 52%] Built target test-grad0
[ 53%] Linking C executable ../bin/test-mul-mat2
[ 54%] Linking CXX executable ../bin/test-quantize-fns
[ 55%] Linking CXX executable ../bin/test-timestep_embedding
[ 55%] Built target test-mul-mat2
[ 56%] Linking CXX executable ../bin/test-mul-mat
[ 56%] Built target test-quantize-fns
[ 56%] Built target test-timestep_embedding
/home/ggml/work/ggml/tests/test-conv2d.cpp:24:13: warning: ‘void ggml_log_callback_default(ggml_log_level, const char*, void*)’ defined but not used [-Wunused-function]
   24 | static void ggml_log_callback_default(ggml_log_level level, const char * text, void * user_data) {
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/ggml/work/ggml/tests/test-conv1d.cpp:24:13: warning: ‘void ggml_log_callback_default(ggml_log_level, const char*, void*)’ defined but not used [-Wunused-function]
   24 | static void ggml_log_callback_default(ggml_log_level level, const char * text, void * user_data) {
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~
[ 57%] Linking CXX executable ../../bin/simple-ctx
[ 57%] Built target test-mul-mat
[ 58%] Linking CXX executable ../../bin/simple-backend
[ 59%] Linking CXX executable ../../bin/mnist-cpu
[ 59%] Built target simple-ctx
[ 60%] Linking CXX executable ../bin/test-conv2d
[ 61%] Linking CXX executable ../bin/test-conv1d
[ 61%] Built target simple-backend
[ 61%] Built target mnist-cpu
[ 61%] Built target test-conv2d
[ 61%] Built target test-conv1d
[ 62%] Linking CXX executable ../bin/test-quantize-perf
/home/ggml/work/ggml/examples/whisper/whisper.cpp: In function ‘ggml_cgraph* whisper_build_graph_decoder(whisper_context&, whisper_state&, const whisper_batch&, bool, bool)’:
/home/ggml/work/ggml/examples/whisper/whisper.cpp:2591:59: error: too few arguments to function ‘ggml_tensor* ggml_concat(ggml_context*, ggml_tensor*, ggml_tensor*, int)’
 2591 |                             aheads_cross_QKs = ggml_concat(ctx0, aheads_cross_QKs, aheads_KQs);
      |                                                ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/ggml/work/ggml/examples/whisper/whisper.h:4,
                 from /home/ggml/work/ggml/examples/whisper/whisper.cpp:1:
/home/ggml/work/ggml/src/../include/ggml/ggml.h:1012:35: note: declared here
 1012 |     GGML_API struct ggml_tensor * ggml_concat(
      |                                   ^~~~~~~~~~~
[ 62%] Built target test-quantize-perf
[ 63%] Linking CXX executable ../bin/test-backend-ops
[ 64%] Linking CXX static library libcommon.a
[ 64%] Built target test-backend-ops
[ 64%] Built target common
[ 65%] Building CXX object examples/mnist/CMakeFiles/mnist.dir/main.cpp.o
[ 67%] Building CXX object examples/yolo/CMakeFiles/yolov3-tiny.dir/yolov3-tiny.cpp.o
[ 68%] Building CXX object examples/yolo/CMakeFiles/yolov3-tiny.dir/yolo-image.cpp.o
[ 69%] Building CXX object examples/mnist/CMakeFiles/mnist-cnn.dir/main-cnn.cpp.o
[ 70%] Building CXX object examples/sam/CMakeFiles/sam.dir/main.cpp.o
make[2]: *** [examples/whisper/CMakeFiles/whisper-cpp.dir/build.make:76: examples/whisper/CMakeFiles/whisper-cpp.dir/whisper.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1273: examples/whisper/CMakeFiles/whisper-cpp.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
/home/ggml/work/ggml/examples/yolo/yolov3-tiny.cpp: In function ‘void detect(yolo_image&, const yolo_model&, float, const std::vector<std::__cxx11::basic_string<char> >&, const std::vector<yolo_image>&)’:
/home/ggml/work/ggml/examples/yolo/yolov3-tiny.cpp:415:25: error: too few arguments to function ‘ggml_tensor* ggml_concat(ggml_context*, ggml_tensor*, ggml_tensor*, int)’
  415 |     result = ggml_concat(ctx0, result, layer_8);
      |              ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/ggml/work/ggml/examples/yolo/yolov3-tiny.cpp:1:
/home/ggml/work/ggml/src/../include/ggml/ggml.h:1012:35: note: declared here
 1012 |     GGML_API struct ggml_tensor * ggml_concat(
      |                                   ^~~~~~~~~~~
make[2]: *** [examples/yolo/CMakeFiles/yolov3-tiny.dir/build.make:76: examples/yolo/CMakeFiles/yolov3-tiny.dir/yolov3-tiny.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
[ 71%] Linking CXX executable ../../bin/mnist
[ 71%] Built target mnist
[ 72%] Linking CXX executable ../../bin/mnist-cnn
[ 73%] Built target mnist-cnn
[ 73%] Linking CXX static library libcommon-ggml.a
make[1]: *** [CMakeFiles/Makefile2:1463: examples/yolo/CMakeFiles/yolov3-tiny.dir/all] Error 2
[ 73%] Built target common-ggml
[ 74%] Linking CXX executable ../../bin/sam
[ 74%] Built target sam
make: *** [Makefile:146: all] Error 2

real	0m7.722s
user	0m23.243s
sys	0m2.874s
